--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,6 +22,16 @@
 			<groupId>de.schildbach.pte</groupId>
 			<artifactId>public-transport-enabler</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.kxml</groupId>
+			<artifactId>kxml2</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 	</build>
