--- a/web/pom.xml
+++ b/web/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hisrc.dbhackathon</groupId>
 	<artifactId>dbodtc-web</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>DB Open Data Train Challenge - Web</name>
 	<parent>
 		<groupId>org.hisrc.dbhackathon</groupId>
@@ -22,6 +22,25 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
